--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>shawn-cv</title>
     
-    <link rel="stylesheet" href="static/official/bootstrap.min.css">
+    <link rel="stylesheet" href="./static/official/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
   </head>
   <body>
@@ -13,13 +13,13 @@
     <!-- built files will be auto injected -->
     <!-- Latest compiled and minified JavaScript -->
 
-    <script src="static/official/jquery-3.3.1.min.js"></script>
+    <script src="./static/official/jquery-3.3.1.min.js"></script>
     <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script> -->
 
-    <script src="static/official/bootstrap.min.js"></script>
+    <script src="./static/official/bootstrap.min.js"></script>
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </body>
 </html>
