--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
     <link rel="stylesheet" href="/static/official/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+
+    <!-- font imports -->
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Lato:300" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
